Updates code to process taps while reading, to avoid extra loops and to save processing time.